--- a/src/app/jobs-list/jobs-list.component.scss
+++ b/src/app/jobs-list/jobs-list.component.scss
@@ -1,6 +1,7 @@
 .jobs-section{
     padding: 0.5rem;
     /* border: 0.25px solid black; */
+    width: 90%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -8,7 +9,8 @@
     border-left: 0.1px solid #f3f3f3 ;
     box-shadow: 5px 5px 5px -5px black;
     border-radius: 0.5rem;
-    flex-wrap: wrap;
+    column-gap: 0.5rem;
+    // flex-wrap: wrap;
     row-gap: 1rem;
 }
 .jobs-group{
@@ -19,7 +21,7 @@
 }
 .job-detail{
     display: flex;
-    column-gap: 1rem;
+    column-gap: 0.5rem;
     align-items: center;
 }
 .details{
@@ -27,6 +29,11 @@
     align-items: center;
     column-gap: 0.5rem;
     /* d-flex align-items-center gap-1 */
+    div{
+        display: flex;
+        align-items: center;
+        column-gap: 0.2rem;
+    }
 }
 .apply{
     flex-direction: column;
