styled the home

--- a/src/app/components/job-card/job-card.component.html
+++ b/src/app/components/job-card/job-card.component.html
@@ -28,7 +28,7 @@
           </div>
         </div>
         <div class=" job-detail apply">
-          <!-- <button (click)="navToDescription(i)" class="pointer">Apply now</button> -->
+          <button class="pointer">Apply now</button>
           
           <span>{{job.createdAt | daysAgo}}</span>
         </div>
