--- a/src/app/components/job-card/job-card.component.scss
+++ b/src/app/components/job-card/job-card.component.scss
@@ -28,6 +28,7 @@
     display: flex;
     align-items: center;
     column-gap: 0.5rem;
+    flex-wrap: wrap;
     /* d-flex align-items-center gap-1 */
     div{
         display: flex;
@@ -38,6 +39,9 @@
 .apply{
     flex-direction: column;
     row-gap: 0.4rem;
+    span{
+        font-size: 1rem;
+    }
 }
 .apply button{
     background-color: #00B074;
@@ -64,6 +68,9 @@
         /* width:3rem; */
         padding: 0.2rem 0.4rem;
         
+    }
+    .apply span{
+        font-size: 0.8rem;
     }
     .details{
         flex-direction: column;
