--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,34 +11,40 @@
             <option value="remote">Remote</option>
             <option value="industry">Industry</option>
             <option value="company">Company</option>
-          </select>
-          <input type="text" [(ngModel)]="searchText">
-          <span class="material-symbols-outlined" (click)="applyFilter()">
+        </select>
+        <input type="text" [(ngModel)]="searchText">
+        <span class="material-symbols-outlined" (click)="applyFilter()">
             search
-            </span>
+        </span>
     </div>
     <div>
         <div appAlignItemCenter class="category">
-          <b>IT JobS</b><span (click)="viewAll('it')">View All</span>
+            <b>IT JobS</b><span (click)="viewAll('it')">View All</span>
         </div>
-        @for( i of jobs ;track i){
+        <div class="job-card-div">
+            @for( i of jobs ;track i){
             <app-job-card [job]="i"></app-job-card>
-        }
+            }
+        </div>
+    </div>
+    <div >
+        <div appAlignItemCenter class="category">
+            <b> NON-IT JobS</b><span (click)="viewAll('nonit')">View All</span>
+        </div>
+        <div class="job-card-div">
+            @for( i of jobs ;track i){
+            <app-job-card [job]="i"></app-job-card>
+            }
+        </div>
     </div>
     <div>
         <div appAlignItemCenter class="category">
-          <b>  NON-IT JobS</b><span (click)="viewAll('nonit')">View All</span>
+            <b>Retail Jobs</b><span (click)="viewAll('retail')">View All</span>
         </div>
-        @for( i of jobs ;track i){
-           <app-job-card [job]="i"></app-job-card>
-        }
-    </div>
-    <div>
-        <div appAlignItemCenter class="category">
-          <b>Retail Jobs</b><span (click)="viewAll('retail')">View All</span>
+        <div class="job-card-div">
+            @for( i of jobs ;track i){
+            <app-job-card [job]="i"></app-job-card>
+            }
         </div>
-        @for( i of jobs ;track i){
-           <app-job-card [job]="i"></app-job-card>
-        }
     </div>
 </div>
