--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,11 @@
 
 /* Importing Bootstrap SCSS file. */
 @import 'bootstrap/scss/bootstrap';
+@import 'assets/style/particals';
+
+body{
+    padding: 1rem 2rem;
+    @include mQ(500px){
+        padding: 1rem 0.5rem;
+    }
+}
