--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,29 +9,48 @@
             <b>IT JobS</b><span (click)="viewAll('it')">View All</span>
         </div>
         <div class="job-card-div">
-            @for( i of jobs ;track i){
-            <app-job-card [job]="i"></app-job-card>
+            
+            @if (!loading) {
+              @for (i of [1, 2, 3]; track i) {
+                <div class="shimmer"></div>
+              }
+            } @else {
+              @for (i of jobs; track i) {
+                <app-job-card [job]="i"></app-job-card>
+              }
             }
-        </div>
+          </div>
     </div>
     <div >
         <div appAlignItemCenter class="category">
             <b> NON-IT JobS</b><span (click)="viewAll('nonit')">View All</span>
         </div>
         <div class="job-card-div">
-            @for( i of jobs ;track i){
-            <app-job-card [job]="i"></app-job-card>
-            }
+            @if (!loading) {
+                @for (i of [1, 2, 3]; track i) {
+                  <div class="shimmer"></div>
+                }
+              } @else {
+                @for (i of jobs; track i) {
+                  <app-job-card [job]="i"></app-job-card>
+                }
+              }
         </div>
-    </div>
+    </div> 
     <div>
         <div appAlignItemCenter class="category">
             <b>Retail Jobs</b><span (click)="viewAll('retail')">View All</span>
         </div>
         <div class="job-card-div">
-            @for( i of jobs ;track i){
-            <app-job-card [job]="i"></app-job-card>
-            }
+            @if (!loading) {
+                @for (i of [1, 2, 3]; track i) {
+                  <div class="shimmer"></div>
+                }
+              } @else {
+                @for (i of jobs; track i) {
+                  <app-job-card [job]="i"></app-job-card>
+                }
+              }
         </div>
     </div>
 </div>
