--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -14,7 +14,27 @@
 .job-card-div{
     display: flex;
     flex-direction: row;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 16px;
+    justify-content: center;
+    align-items: stretch;
     @include mQ(500px){
         flex-direction: column;
     }
 }
+.shimmer {
+    animation: shimmer 3s none infinite;
+    background: #f0f0f0 linear-gradient(to right, transparent 0%, rgba(0, 0, 0, 0.2) 25%, transparent 50%);
+    background-size: 200% 100%;
+    height: 100px;
+    margin-bottom: 10px;
+    width: 30%;
+    @include mQ(500px){
+        width: 100%;
+    }
+  }
+  @keyframes shimmer {
+    from { background-position: 200% 0; }
+    to { background-position: -200% 0; }
+  }
