added the roytes

--- a/src/app/components/search-header/search-header.component.html
+++ b/src/app/components/search-header/search-header.component.html
@@ -2,7 +2,7 @@
     <form [formGroup]="filter">
         <select formControlName="type" placeholder="select" class="border fieldss" (change)="selected()">
             <!-- <option value="" disabled selected>Select the filter</option> -->
-            <option value="Job">Job</option>
+            <option value="job">Job</option>
             <!-- <option value="city">City</option> -->
             <option value="remote">Remote</option>
             <!-- <option value="industry">Industry</option> -->
