added the suggestions

--- a/src/app/components/job-card/job-card.component.html
+++ b/src/app/components/job-card/job-card.component.html
@@ -27,7 +27,7 @@
               
           </div>
         </div>
-        <div class=" job-detail apply">
+        <div class=" job-detail apply" *ngIf="showBtns">
           <button class="pointer">Apply now</button>
           
           <span>{{job.createdAt | daysAgo}}</span>
