--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -15,7 +15,7 @@
     display: flex;
     flex-direction: row;
     display: flex;
-    flex-wrap: wrap;
+    // flex-wrap: wrap;
     gap: 16px;
     justify-content: center;
     align-items: stretch;
