--- a/src/app/jobs-details/jobs-details.component.scss
+++ b/src/app/jobs-details/jobs-details.component.scss
@@ -1,8 +1,12 @@
+.containers-div{
+    height: 100vh;
+}
 .job-detail{
     display: flex;
     column-gap: 1rem;
     align-items: center;
 }
+
 .details{
     display: flex;
     align-items: center;
@@ -18,11 +22,121 @@
     font-weight: 400;
 }
 
+ button{
+    background-color: #00B074;
+    width: max-content;
+    border: none;
+    border-radius: 0.4rem;
+    padding: 0.4rem 0.6rem;
+    color: white;
+    font-family: 'Inter', sans-serif;
+    font-weight: 500;
+    transition: .5s;
+}
+
+@media(max-width:500px) {
+    button{
+        /* width:3rem; */
+        padding: 0.2rem 0.4rem;
+        
+    }
+    .details{
+        flex-direction: column;
+        align-items: start;
+    }
+}
+
+
+// suggestions
+.suggestions{
+    width: 100%;
+    display: flex;
+    overflow-x: scroll;
+    column-gap: 1rem;
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; /* Internet Explorer 10+ */
+  
+    &::-webkit-scrollbar {
+      display: none; /* Chrome, Safari, Opera */
+    }
+    padding: 1rem;
+}
+.jobs-section{
+    padding: 0.5rem;
+    /* border: 0.25px solid black; */
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-top: 0.1px solid #f3f3f3;
+    border-left: 0.1px solid #f3f3f3 ;
+    box-shadow: 5px 5px 5px -5px black;
+    border-radius: 0.5rem;
+    column-gap: 0.5rem;
+    // flex-wrap: wrap;
+    row-gap: 1rem;
+}
+.jobs-group{
+    display: flex;
+    row-gap: 1rem;
+    flex-direction: column;
+   align-items: center;
+}
+.job-suggestion{
+    display: flex;
+    column-gap: 0.5rem;
+    align-items: center;
+    box-shadow: 1px 2px 3px black;
+    padding: 0 0.5rem;
+    border-radius: 0.4rem;
+}
+.details{
+    display: flex;
+    align-items: center;
+    column-gap: 0.5rem;
+    flex-wrap: wrap;
+    /* d-flex align-items-center gap-1 */
+    div{
+        display: flex;
+        align-items: center;
+        column-gap: 0.2rem;
+    }
+}
+.apply{
+    flex-direction: column;
+    row-gap: 0.4rem;
+    span{
+        font-size: 1rem;
+    }
+}
+.apply button{
+    background-color: #00B074;
+    width: max-content;
+    border: none;
+    border-radius: 0.4rem;
+    padding: 0.4rem 0.6rem;
+    color: white;
+    font-family: 'Inter', sans-serif;
+    font-weight: 500;
+    transition: .5s;
+}
+.text-bolder{
+    font-weight: 500;
+    font-size: 1.1rem;
+}
+.text-bold{
+    font-size: 1rem;
+    font-weight: 400;
+}
+
 @media(max-width:500px) {
     .apply button{
         /* width:3rem; */
         padding: 0.2rem 0.4rem;
         
+    }
+    .apply span{
+        font-size: 0.8rem;
     }
     .details{
         flex-direction: column;
