--- a/src/app/components/job-card/job-card.component.html
+++ b/src/app/components/job-card/job-card.component.html
@@ -1,7 +1,7 @@
 <ng-container   >
     <div class=" col-12 jobs-group">
       <section class="col-11 jobs-section" >
-        <div class="col-8  job-detail">
+        <div class="  job-detail">
           <div>
             <img [src]="job.image ? job.image:'assets/Home/calendar.png'" style="width: 3rem; height: 3rem;">
           </div>
