--- a/src/app/jobs-details/jobs-details.component.scss
+++ b/src/app/jobs-details/jobs-details.component.scss
@@ -1,7 +1,12 @@
+@import '../../assets/style/particals.scss';
 .containers-div{
-    height: 100vh;
+    // height: 100vh;
+    display: flex;
+    // flex-direction: column;
+    row-gap: 0.5rem;
 }
 .job-detail{
+    width: 60%;
     display: flex;
     column-gap: 1rem;
     align-items: center;
@@ -12,6 +17,9 @@
     align-items: center;
     column-gap: 0.5rem;
     /* d-flex align-items-center gap-1 */
+}
+.description-div{
+    width: 60%;
 }
 .text-bolder{
     font-weight: 500;
@@ -53,12 +61,12 @@
     display: flex;
     overflow-x: scroll;
     column-gap: 1rem;
-    scrollbar-width: none; /* Firefox */
-    -ms-overflow-style: none; /* Internet Explorer 10+ */
-  
-    &::-webkit-scrollbar {
-      display: none; /* Chrome, Safari, Opera */
-    }
+    // scrollbar-width: none; /* Firefox */
+    // -ms-overflow-style: none; /* Internet Explorer 10+ */
+  scrollbar-width: thin;
+    // &::-webkit-scrollbar {
+    //   display: none; /* Chrome, Safari, Opera */
+    // }
     padding: 1rem;
 }
 .jobs-section{
@@ -142,4 +150,12 @@
         flex-direction: column;
         align-items: start;
     }
+}
+.promo{
+    img{
+    width: 300px;
+    @include mQ(500px){
+        width: 100%;
+    }
+}
 }
