--- a/src/app/jobs-details/jobs-details.component.scss
+++ b/src/app/jobs-details/jobs-details.component.scss
@@ -4,14 +4,23 @@
     display: flex;
     // flex-direction: column;
     row-gap: 0.5rem;
+    @include mQ(500px){
+        flex-direction: column;
+        row-gap: 0.5rem;
+    }
 }
 .job-detail{
-    width: 60%;
+    // width: 60%;
     display: flex;
     column-gap: 1rem;
     align-items: center;
 }
 
+h4{
+    @include mQ(500px){
+        margin-top: 1rem;
+    }
+}
 .details{
     display: flex;
     align-items: center;
@@ -19,7 +28,7 @@
     /* d-flex align-items-center gap-1 */
 }
 .description-div{
-    width: 60%;
+    // width: 60%;
 }
 .text-bolder{
     font-weight: 500;
@@ -30,6 +39,9 @@
     font-weight: 400;
 }
 
+.apply-section{
+    // width: 60%;
+}
  button{
     background-color: #00B074;
     width: max-content;
@@ -152,8 +164,11 @@
     }
 }
 .promo{
+    // width: 30%;
+    // height:auto;
     img{
-    width: 300px;
+        width: 100%;
+        height: 80%;
     @include mQ(500px){
         width: 100%;
     }
