--- a/src/app/admin/job-posting/job-posting.component.html
+++ b/src/app/admin/job-posting/job-posting.component.html
@@ -1,62 +1,93 @@
 <div>
-    <section>
+    <div class="headingss">
         <h1>Post a Job Opening</h1>
         <p>Fill out the details below to submit the JObs Form.</p>
-    </section>
+    </div>
     <section>
-        <mat-card>
-            <form [formGroup]="jobsForm">
-                <div>
-                    <label>Job Tittle</label>
-                    <input type="text">
-                </div>
-                <div>
-                    <label>Company Name</label>
-                    <input type="text">
-                </div>
-                <div>
-                    <label>Company Name</label>
-                    <select>
-                        <option disabled selected>Select the Job Type</option>
-                        <option value="Full-time">Full-time</option>
-                        <option value="Part-time">Part-time</option>
-                        <option value="Contract">Contract</option>
-                    </select>
-                </div>
-                <div>
-                    <label>Industry Type</label>
-                    <select>
-                        <option disabled selected>Select the Industry Type</option>
-                        <option value="IT">IT</option>
-                        <option value="NON-IT">NON-IT</option>
-                        <option value="Retail">Retail</option>
-                    </select>
-                </div>
-                <div>
-                    <label> City</label>
-                    <input type="text">
-                </div>
-                <div>
-                    <label> Full Address</label>
-                    <input type="text">
-                </div>
-                <div>
-                    <label> Year Of Expernce</label>
-                    <input type="number">
-                </div>
-                <div>
-                    <label>Interview Type</label>
-                    <select>
-                        <option disabled selected>Select Interview Type</option>
-                        <option value="Online">Online</option>
-                        <option value="Walk-In">Walk-In</option>
-                    </select>
-                </div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-            </form>
+        <mat-card style="border-color: aliceblue;">
+          <form [formGroup]="jobsForm">
+            <div>
+              <label>Job Title</label>
+              <input type="text" formControlName="title" />
+            </div>
+      
+            <div>
+              <label>Company Name</label>
+              <input type="text" formControlName="company" />
+            </div>
+      
+            <div>
+              <label>Job Type</label>
+              <select formControlName="jobType">
+                <option disabled selected>Select the Job Type</option>
+                <option value="Full-time">Full-time</option>
+                <option value="Part-time">Part-time</option>
+                <option value="Contract">Contract</option>
+              </select>
+            </div>
+      
+            <div>
+              <label>Industry Type</label>
+              <select formControlName="industry">
+                <option disabled selected>Select the Industry Type</option>
+                <option value="IT">IT</option>
+                <option value="NON-IT">NON-IT</option>
+                <option value="Retail">Retail</option>
+              </select>
+            </div>
+      
+            <div>
+              <label>City</label>
+              <input type="text" formControlName="city" />
+            </div>
+      
+            <div>
+              <label>Full Address</label>
+              <input type="text" formControlName="address" />
+            </div>
+      
+            <div>
+              <label>Years of Experience</label>
+              <input type="number" formControlName="experience" />
+            </div>
+      
+            <div>
+              <label>Interview Type</label>
+              <select formControlName="interviewType">
+                <option disabled selected>Select Interview Type</option>
+                <option value="Online">Online</option>
+                <option value="Walk-In">Walk-In</option>
+              </select>
+            </div>
+      
+            <div>
+              <label>Required Skills</label>
+              <ng-select
+                [items]="skills"
+                bindLabel="name"
+                
+                formControlName="skills"
+                [multiple]="true"
+                dropdownPosition="auto"
+              >
+              </ng-select>
+            </div>
+      
+            <div>
+              <label>Description</label>
+              <textarea formControlName="description"></textarea>
+            </div>
+      
+            <div>
+              <label>Application Link / Contact / Walk-In address</label>
+              <input type="text" formControlName="applicationLink" />
+            </div>
+      
+            <div>
+              <button type="submit">Submit</button>
+            </div>
+          </form>
         </mat-card>
-    </section>
+      </section>
+      
 </div>
